# my-exercism

javascript/bob/: bob.js  (+3 more)
python/: README.md  pyproject.toml  pyproject_bk.toml
python/acronym/: acronym.py
python/acronym/.exercism/: metadata.json
python/bank-account/: bank_account.py  bank_account_test.py
python/bank-account/.exercism/: metadata.json
python/black-jack/: black_jack.py
python/black-jack/.exercism/: metadata.json
python/card-games/: lists.py
python/card-games/.exercism/: metadata.json
python/cater-waiter/: sets.py  sets_categories_data.py  sets_test.py  sets_test_data.py
python/cater-waiter/.exercism/: metadata.json
python/chaitanas-colossal-coaster/: list_methods.py
python/chaitanas-colossal-coaster/.exercism/: metadata.json
python/collatz-conjecture/: collatz_conjecture.py
python/collatz-conjecture/.exercism/: metadata.json
python/currency-exchange/: exchange.py
python/ellens-alien-game/: classes.py
python/ghost-gobble-arcade-game/: arcade_game.py
python/guidos-gorgeous-lasagna/: lasagna.py
python/hamming/: hamming.py
python/high-scores/: high_scores.py
python/inventory-management/: dicts.py
python/isogram/: isogram.py
python/kindergarten-garden/: kindergarten_garden.py
python/little-sisters-essay/: string_methods.py
python/little-sisters-vocab/: strings.py
python/locomotive-engineer/: locomotive_engineer.py
python/luhn/: luhn.py
python/making-the-grade/: loops.py
python/matrix/: matrix.py
python/meltdown-mitigation/: conditionals.py
python/phone-number/: phone_number.py  phone_number_test.py
python/pig-latin/: pig_latin.py
python/plane-tickets/: generators.py
python/poker/: poker.py
python/raindrops/: raindrops.py
python/scrabble-score/: scrabble_score.py
python/tisbury-treasure-hunt/: tuples.py
python/twelve-days/: twelve_days.py
(+125 files in other folders)
