[tool.poetry]
name = "python"
version = "0.1.0"
description = "my exercism exercises"
authors = ["Eric Ti Yu Chiang <serixscorpio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
