[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python"
version = "0.1.0"
description = "Eric's Exercism Code in Python"
authors = [
    { name = "Eric Ti Yu Chiang", email = "serixscorpio@gmail.com" }
]
dependencies = [
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.hatch.build.targets.wheel]
include = ["*/*.py"]

[tool.ruff]
line-length = 120
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.3",
    "mypy>=1.8.0",
]
